--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 OpenMUL
 
 @Shoufu @Veljko
+I could successfully build it on the OpenMUL VM (http://www.openmul.org/openmul-vm.html).
 
 ## Source
 $  git clone https://github.com/quickhair/openmul-mod.git
@@ -14,3 +15,5 @@ $  git clone https://github.com/quickhair/openmul-mod.git
 ## How to run?
     $ ./mul.sh init
     $ ./mul.sh start l2switch
+
+OpenMUL Documentation: https://raw.githubusercontent.com/openmul/openmul/master/docs/openmul-HOWTO.pdf
