--- a/README
+++ b/README
@@ -16,4 +16,5 @@ $  git clone https://github.com/quickhair/openmul-mod.git
     $ ./mul.sh init
     $ ./mul.sh start l2switch
 
+@Shoufu: Currently I put your memory checking code in application/l2switch/l2switch.c
 OpenMUL Documentation: https://raw.githubusercontent.com/openmul/openmul/master/docs/openmul-HOWTO.pdf.
