--- a/README
+++ b/README
@@ -9,12 +9,12 @@ I could successfully build it on the OpenMUL VM (http://www.openmul.org/openmul-
 
 ## How to build MUL Controller on Ubuntu/CentOS?
    Run all-in-one build command:
-   $ cd openmul-git
+   $ cd openmul-mod
    $ ./build.sh 
    The above command will install all necessary packages and build necessary modules.
 
 ## How to run?
-    $ cd openmul-git
+    $ cd openmul-mod
     $ ./mul.sh init  (only for first time)
     $ ./mul.sh start l2switch
 
