--- a/README
+++ b/README
@@ -7,7 +7,7 @@ I could successfully build it on the OpenMUL VM (http://www.openmul.org/openmul-
    $ git clone https://github.com/quickhair/openmul-mod.git
 
 
-## How to build MUL Controller on Ubuntu/CentOS?
+## How to build MUL Controller?
    Run all-in-one build command:
    $ cd openmul-mod
    $ ./build.sh 
